# rust-tui

./: .gitignore  .no  AGENTS.md  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  claude.py  justfile
.cargo/: config.toml
config/: .env.example  config.json
config/prompts/: algorithm-quick-guide.txt  automate-repository-management-with-opencode-cli.txt  build-a-ui-library-for-esp32.txt  ci-cd-strategy-for-springboot-rest-apis-deployment.txt  code-review-agent.txt  code-review-assistant.txt  code-review-expert.txt  code-reviewer.txt  comprehensive-ui-ux-mobile-app-analysis.txt  comprehensive-web-application-development-with-security-and-performance-optimization.txt  create-python-dev-container.txt  developer-work-analysis-from-git-diff-and-commit-message.txt  devops-engineer.txt  digital-art-gallery-guide.txt  frontend-lead.txt  fullstack-developer.txt  gentle-mentor.txt  git-github-expert.txt  github-code-structure-tutor.txt  linux-script-developer.txt  linux-terminal.txt  network-packet-analyzer-cli.txt  networking-engineer-portfolio-website.txt  python-interpreter.txt  qa-tester.txt  regex-generator.txt  roast-me.txt  senior-frontend-developer.txt  senior-java-backend-engineer-expert.txt  senior-prompt-engineer-role-guide.txt  seo-strategy-for-container-tracking-keywords.txt  setting-up-a-new-ios-app-in-xcode.txt  sex.txt  smart-application-developer-assistant.txt  software-quality-assurance-tester.txt  spongebob-s-magic-conch-shell.txt  sql-terminal.txt  squid-game-red-light-green-light-challenge.txt  study-review-companion.txt  swiftui-ios-app-development-guide.txt  (+11 more)
docs/proposals/: 01-config-init.md  02-session-autosave.md  03-conversation-export.md  04-custom-keymap.md  05-web-search-cache.md
scripts/: bing_search.sh  count_functions.py  deepchat-wrapper.sh  notify_bark.py  open_doc.sh  tavily_search.sh
src/: args.rs  config.rs  conversation.rs  debug.rs  hooks.rs  lib.rs  main.rs  model_registry.rs  prompt_pack.rs  question_set.rs  render.rs  session.rs  system_prompts.rs  test_support.rs  types.rs  ui.rs
src/cli/: mod.rs  model.rs
src/framework/: mod.rs
src/llm/: http_client.rs  mod.rs  prompt_manager.rs  prompts.rs  rig.rs  templates.rs
src/render/: cache.rs  layout.rs  (+4 more)
tests/: perf_render.rs
workspace/: create_files.py  file_01.txt  file_02.txt  file_03.txt  file_04.txt  file_05.txt  file_06.txt  file_07.txt  file_08.txt  file_09.txt  file_10.txt
(+602 files in other folders)
