[package]
name = "rust-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deepchat"
path = "src/main.rs"

[dependencies]
arboard = "3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
textwrap = "0.16"
tui-textarea = { version = "0.7.0", features = ["crossterm"] }
stakpak-popup-widget = "0.3.10"
unicode-width = "0.1"
