[package]
name = "rust-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deepchat"
path = "src/main.rs"

[dependencies]
rand = "0.8"
arboard = "3"
base64 = "0.22"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
pulldown-cmark = "0.12"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"
textwrap = "0.16"
tui-textarea = { version = "0.7.0", features = ["crossterm"] }
fuzzy-matcher = "0.3.7"
stakpak-popup-widget = "0.3.10"
unicode-width = "0.1"
rig-core = "0.27"
minijinja = { version = "1", features = ["loader"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
portable-pty = "0.9.0"
vt100 = "0.15.2"
